Fixed vertical align in tables

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -201,3 +201,7 @@ h1 {
 	margin: 0;
 	text-align: center;
 }
+
+.table > tbody > tr > td {
+     vertical-align: middle;
+}
